🚧 Small changes in BuildSteps